--- a/02.css3_3D动画/07.3D缩放-scaleZ.html
+++ b/02.css3_3D动画/07.3D缩放-scaleZ.html
@@ -14,7 +14,7 @@
         background-color: skyblue;
 
         /* 缩放 */
-        /* 感觉没有效果... */
+        /* 感觉没有效果... 它的作用在3D空间中体现 */
         transform: perspective(200px) scaleZ(0.5);
       }
     </style>
