--- a/02.css3_3D动画/08.在父元素中使用3D空间.html
+++ b/02.css3_3D动画/08.在父元素中使用3D空间.html
@@ -20,7 +20,8 @@
 
         /* 开启透视 */
         perspective: 200px;
-        /* 开启3D空间 */
+        /* 开启3D空间,  */
+        /* transform-style默认值为 flat 表示2d空间内 */
         transform-style: preserve-3d;
       }
 
