--- a/案例/2.做个骰子.html
+++ b/案例/2.做个骰子.html
@@ -52,6 +52,11 @@
         border-radius: 30px;
       }
 
+      .box-item > img {
+        width: 100%;
+        height: 100%;
+      }
+
       .item1 {
         transform: translate3d(0, 0, 50px);
       }
@@ -79,12 +84,42 @@
   </head>
   <body>
     <div class="box">
-      <div class="box-item item1">1</div>
-      <div class="box-item item2">2</div>
-      <div class="box-item item3">3</div>
-      <div class="box-item item4">4</div>
-      <div class="box-item item5">5</div>
-      <div class="box-item item6">6</div>
+      <div class="box-item item1">
+        <img
+          src="./res/image/1.png"
+          alt="1"
+        />
+      </div>
+      <div class="box-item item2">
+        <img
+          src="./res/image/2.png"
+          alt="2"
+        />
+      </div>
+      <div class="box-item item3">
+        <img
+          src="./res/image/3.png"
+          alt="3"
+        />
+      </div>
+      <div class="box-item item4">
+        <img
+          src="./res/image/4.png"
+          alt="4"
+        />
+      </div>
+      <div class="box-item item5">
+        <img
+          src="./res/image/5.png"
+          alt="5"
+        />
+      </div>
+      <div class="box-item item6">
+        <img
+          src="./res/image/6.png"
+          alt="6"
+        />
+      </div>
     </div>
   </body>
 </html>
