--- a/案例/4.2.5D动画.html
+++ b/案例/4.2.5D动画.html
@@ -7,6 +7,7 @@
       content="width=device-width, initial-scale=1.0"
     />
     <title>Document</title>
+    <style></style>
   </head>
   <body></body>
 </html>
