--- a/案例/4.2.5D动画.html
+++ b/案例/4.2.5D动画.html
@@ -7,7 +7,19 @@
       content="width=device-width, initial-scale=1.0"
     />
     <title>Document</title>
+    <link
+      rel="stylesheet"
+      href="./res/css/2.5Dstyle.css"
+    />
     <style></style>
   </head>
-  <body></body>
+  <body>
+    <div class="show-content">
+      <img
+        class="background"
+        src="./res/image/2.5D/banbj.jpeg"
+        alt=""
+      />
+    </div>
+  </body>
 </html>
