--- a/案例/4.2.5D动画.html
+++ b/案例/4.2.5D动画.html
@@ -15,11 +15,75 @@
   </head>
   <body>
     <div class="show-content">
-      <img
-        class="background"
-        src="./res/image/2.5D/banbj.jpeg"
-        alt=""
-      />
+      <div class="banner">
+        <img
+          class="banner-background"
+          src="./res/image/2.5D/banner.png"
+          alt=""
+        />
+        <!-- 屏幕数据 -->
+        <img
+          class="tuMing"
+          src="./res/image/2.5D/tuMing.png"
+          alt=""
+        />
+        <!-- people -->
+        <img
+          class="people"
+          src="./res/image/2.5D/ren.png"
+          alt=""
+        />
+        <!-- 运输带光线 -->
+        <img
+          class="ray-left"
+          src="./res/image/2.5D/guang.png"
+          alt=""
+        />
+        <img
+          class="ray-right"
+          src="./res/image/2.5D/guang.png"
+          alt=""
+        />
+        <!-- 运输带 -->
+        <img
+          class="conveyor"
+          src="./res/image/2.5D/tuC.png"
+          alt=""
+        />
+        <!-- 移动数据 -->
+        <img
+          class="data-background"
+          src="./res/image/2.5D/chaunB.png"
+          alt=""
+        />
+        <!-- 字母 -->
+        <img
+          class="char-erp"
+          src="./res/image/2.5D/ziB.png"
+          alt=""
+        />
+        <img
+          class="char-crm"
+          src="./res/image/2.5D/ziA.png"
+          alt=""
+        />
+        <img
+          class="char-oa"
+          src="./res/image/2.5D/ziC.png"
+          alt=""
+        />
+        <!-- 光圈 -->
+        <img
+          class="aperture-top"
+          src="./res/image/2.5D/tuA.png"
+          alt=""
+        />
+        <img
+          class="aperture-bottom"
+          src="./res/image/2.5D/tuA.png"
+          alt=""
+        />
+      </div>
     </div>
   </body>
 </html>
