--- a/案例/4.2.5D动画.html
+++ b/案例/4.2.5D动画.html
@@ -83,6 +83,55 @@
           src="./res/image/2.5D/tuA.png"
           alt=""
         />
+
+        <!-- 回收标志 -->
+        <img
+          class="recovery-mark"
+          src="./res/image/2.5D/tuB.png"
+          alt=""
+        />
+
+        <!-- 方块A -->
+        <img
+          class="block-A"
+          src="./res/image/2.5D/lingxA.png"
+          alt=""
+        />
+
+        <!-- 方块B -->
+        <img
+          class="block-B"
+          src="./res/image/2.5D/lingxB.png"
+          alt=""
+        />
+
+        <!-- 方块C -->
+        <img
+          class="block-C"
+          src="./res/image/2.5D/lingxC.png"
+          alt=""
+        />
+
+        <!-- 方块D -->
+        <img
+          class="block-D"
+          src="./res/image/2.5D/lingxD.png"
+          alt=""
+        />
+
+        <!-- 方块E -->
+        <img
+          class="block-E"
+          src="./res/image/2.5D/lingxE.png"
+          alt=""
+        />
+
+        <!-- 方块F -->
+        <img
+          class="block-F"
+          src="./res/image/2.5D/lingxF.png"
+          alt=""
+        />
       </div>
     </div>
   </body>
