--- a/04.学习svg/10.利用svg绘制圆形.html
+++ b/04.学习svg/10.利用svg绘制圆形.html
@@ -18,15 +18,12 @@
       width="300"
       height="300"
     >
-      <!-- rx, ry 表示x轴和y轴方向上的圆角 -->
-      <rect
-        x="0"
-        y="0"
-        width="50"
-        height="50"
-        rx="10"
-        ry="10"
-      ></rect>
+      <circle
+        cx="100"
+        cy="100"
+        r="50"
+        fill="red"
+      ></circle>
     </svg>
   </body>
 </html>
