--- a/04.学习svg/12.利用svg绘制直线.html
+++ b/04.学习svg/12.利用svg绘制直线.html
@@ -18,15 +18,14 @@
       width="300"
       height="300"
     >
-      <!-- rx, ry 表示x轴和y轴方向上的圆角 -->
-      <rect
-        x="0"
-        y="0"
-        width="50"
-        height="50"
-        rx="10"
-        ry="10"
-      ></rect>
+      <line
+        x1="100"
+        y1="100"
+        x2="200"
+        y2="100"
+        stroke="red"
+        stroke-width="5"
+      ></line>
     </svg>
   </body>
 </html>
