--- a/04.学习svg/11.利用svg绘制椭圆.html
+++ b/04.学习svg/11.利用svg绘制椭圆.html
@@ -18,15 +18,13 @@
       width="300"
       height="300"
     >
-      <!-- rx, ry 表示x轴和y轴方向上的圆角 -->
-      <rect
-        x="0"
-        y="0"
-        width="50"
-        height="50"
-        rx="10"
-        ry="10"
-      ></rect>
+      <ellipse
+        cx="100"
+        cy="100"
+        rx="25"
+        ry="50"
+        fill="blue"
+      ></ellipse>
     </svg>
   </body>
 </html>
