--- a/04.学习svg/14.利用svg绘制多边形.html
+++ b/04.学习svg/14.利用svg绘制多边形.html
@@ -18,15 +18,12 @@
       width="300"
       height="300"
     >
-      <!-- rx, ry 表示x轴和y轴方向上的圆角 -->
-      <rect
-        x="0"
-        y="0"
-        width="50"
-        height="50"
-        rx="10"
-        ry="10"
-      ></rect>
+      <!-- 自动闭合, 形成闭合图形 -->
+      <polygon
+        points="100 100, 200 150, 100 200"
+        fill="transparent"
+        stroke="black"
+      ></polygon>
     </svg>
   </body>
 </html>
